# mile-csa-api

./: .gitignore  CMakeLists.txt  MileCsaLight.podspec  Readme.md
examples/build-transfer/: CMakeLists.txt  build-transfer.cpp
examples/light-api/: CMakeLists.txt  build-transaction.cpp
examples/light-api-and-curl/: CMakeLists.txt  send-1xdr.cpp
examples/send-1xdr-with-curl/: CMakeLists.txt  send-1xdr.cpp
include/: milecsa.hpp  milecsa_assets.hpp  milecsa_emission.hpp  milecsa_error.hpp  milecsa_light_api.hpp  milecsa_node.hpp  milecsa_pair.hpp  milecsa_result.hpp  milecsa_transaction.hpp  milecsa_transfer.hpp  milecsa_utils.hpp  milecsa_voting.hpp
lib/: CMakeLists.txt
lib/cmake/: milecsa.cmake
src/: milecsa_assets.cpp  milecsa_pair.cpp  milecsa_pair_wrapper.cpp
src/transactions_wrapper/: milecsa_emission.cpp  milecsa_nodes.cpp  milecsa_transfer.cpp  milecsa_voting.cpp
test/: CMakeLists.txt  MileTest.h
test/initial/: initial_test.cpp
test/milecsa_keys_pair_test/: CMakeLists.txt  milecsa_main_test.cpp
test/milecsa_transactions_test/: CMakeLists.txt  MIleTestTransaction.hpp  milecsa_emission_test.hpp  milecsa_nodes_test.hpp  milecsa_transactions_test.cpp  milecsa_transfer_test.hpp  milecsa_voting_test.hpp
